# mineleiri-tech

./: .gitignore  Cargo.toml
ml-client/: Cargo.toml
ml-client/src/: main.rs
ml-server/: Cargo.toml
ml-server/src/: main.rs
