[package]
name = "ml-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "rustls-tls"] }
ron = "0.8.0"
serde = { version = "1.0.148", features = ["derive"] }

