[package]
name = "ml-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
lazy_static = "1.4.0"
ron = "0.8.0"
serde = { version = "1.0.148", features = [ "derive" ] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "process", "io-std"] }
